--- a/Weather/MainPage.xaml
+++ b/Weather/MainPage.xaml
@@ -1,41 +1,268 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Weather.MainPage">
+             x:Class="Weather.MainPage"
+             xmlns:local="clr-namespace:Weather"
+             BackgroundColor="{DynamicResource SecondaryColor}">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="labelStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="Small"/>
+                <Setter Property="TextColor" Value="Gray"/>
+            </Style>
+            <Style x:Key="labelResultStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="Medium"/>
+                <Setter Property="Margin" Value="10,0,0,0"/>
+            </Style>
+
+            <local:LongToDateTimeConverter x:Key="longToDateTimeConverter" />
+            <local:FahrenheitToCelciusConverter x:Key="fahrenheitToCelciusConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
+    <Grid VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Image 
+            Aspect="Fill" 
+            HeightRequest="300"
+            Source="overlay.jpg"
+            VerticalOptions="StartAndExpand"/>
+
+        <StackLayout
+            Margin="20,50"
+            HorizontalOptions="Start"
+            Orientation="Vertical"
+            Spacing="20"
+            VerticalOptions="Start">
+            <StackLayout Orientation="Horizontal">
+                <Label
+                    FontSize="16"
+                    Text="{Binding title}"
+                    TextColor="Black"
+                    VerticalOptions="Center"/>
+
+                <Label
+                    FontSize="16"
+                    Text="{Binding sys.country, StringFormat=',{0}'}"
+                    TextColor="Black"
+                    VerticalOptions="Center"/>
+            </StackLayout>
+        </StackLayout>
+
+        <StackLayout
+            Margin="0,20"
+            HorizontalOptions="Center"
+            Orientation="Vertical"
             VerticalOptions="Center">
+            <StackLayout HorizontalOptions="Center" Orientation="Horizontal" >
+                <Image 
+                    HeightRequest="50"
+                    Source="weather.png"
+                    VerticalOptions="Center"
+                    WidthRequest="50"/>
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+                <Label
+                    FontAttributes="Bold"
+                    FontSize="70"
+                    Text="{Binding main.temp, Converter={StaticResource fahrenheitToCelciusConverter}}"
+                    TextColor ="White"
+                    VerticalOptions="Center"/>
+
+                <Label
+                    FontSize="34"
+                    Text="°C"
+                    TextColor ="White"
+                    VerticalOptions="Center"/>
+
+            </StackLayout>
 
             <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+                FontSize="16"
+                HorizontalOptions="Center"
+                Text="{Binding weather[0].description}"
+                TextColor="White"/>
 
             <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+                FontSize="12"
+                HorizontalOptions="Center"
+                Text=""
+                TextColor="White"/>
+
+        </StackLayout>
+
+        <Frame Grid.Row="1" Margin="20,-40,20,0" Padding="0" CornerRadius="10"
+               HasShadow="True" HeightRequest="120" VerticalOptions="Start">
+            <Grid Margin="0,0,0,0"
+                  VerticalOptions="CenterAndExpand"
+                  HorizontalOptions="FillAndExpand">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <StackLayout 
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Vertical"
+                    Spacing="10">
+                    <Image Source="drop.png" 
+                           MaximumWidthRequest="32"/>
+                    <StackLayout HorizontalOptions="CenterAndExpand" Spacing="7">
+                        <Label 
+                            FontAttributes="Bold" 
+                            FontSize="14" 
+                            HorizontalOptions="Center" 
+                            Text="{Binding main.humidity}" />
+
+                        <Label 
+                            FontSize="11" 
+                            HorizontalOptions="Center" 
+                            Text="Humidity"
+                            TextColor="#7D7D7D"/>
+                    </StackLayout>
+                </StackLayout>
+
+                <StackLayout 
+                    Grid.Column="1"
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Vertical"
+                    Spacing="10">
+                    <Image Source="storm.png" 
+                           MaximumWidthRequest="32"/>
+                    <StackLayout HorizontalOptions="CenterAndExpand" Spacing="7">
+                        <Label 
+                            FontAttributes="Bold" 
+                            FontSize="14" 
+                            HorizontalOptions="Center" 
+                            Text="{Binding wind.speed}" 
+                            TextColor="Black"/>
+
+                        <Label 
+                            FontSize="11" 
+                            HorizontalOptions="Center" 
+                            Text="Wind"
+                            TextColor="#7D7D7D"/>
+                    </StackLayout>
+                </StackLayout>
+
+                <StackLayout 
+                    Grid.Column="2"
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Vertical"
+                    Spacing="10">
+                    <Image Source="pressure.png"
+                           MaximumWidthRequest="32"/>
+                    <StackLayout HorizontalOptions="CenterAndExpand" Spacing="7">
+                        <Label 
+                            FontAttributes="Bold" 
+                            FontSize="14" 
+                            HorizontalOptions="Center" 
+                            Text="{Binding main.pressure}" 
+                            TextColor="Black"/>
+
+                        <Label 
+                            FontSize="11" 
+                            HorizontalOptions="Center" 
+                            Text="Pressure"
+                            TextColor="#7D7D7D"/>
+                    </StackLayout>
+                </StackLayout>
+
+                <StackLayout 
+                    Grid.Column="3"
+                    HorizontalOptions="CenterAndExpand"
+                    Orientation="Vertical"
+                    Spacing="10">
+                    <Image Source="clouds.png" 
+                           MaximumWidthRequest="32"/>
+                    <StackLayout HorizontalOptions="CenterAndExpand" Spacing="7">
+                        <Label 
+                            FontAttributes="Bold" 
+                            FontSize="14" 
+                            HorizontalOptions="Center" 
+                            Text="{Binding clouds.all}" 
+                            TextColor="Black"/>
+
+                        <Label 
+                            FontSize="11" 
+                            HorizontalOptions="Center" 
+                            Text="Cloudiness"
+                            TextColor="#7D7D7D"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+        </Frame>
+
+        <StackLayout
+            Grid.Row="2"
+            Margin="20,40,0,60"
+            Orientation="Vertical"
+            Spacing="20">
+
+            <StackLayout Orientation="Horizontal" Spacing="40">
+                <Label 
+                    FontAttributes="Bold"
+                    FontSize="Small"
+                    Text="Time of Sunrise"
+                    TextColor="Black"
+                    VerticalOptions="Center"/>
+                <Label
+                    FontSize="15"
+                    Text="{Binding sys.sunrise, Converter={StaticResource longToDateTimeConverter}}"
+                    TextColor="Black"
+                    VerticalOptions="Center"/>
+            </StackLayout>
+
+            <StackLayout Orientation="Horizontal" Spacing="40">
+                <Label 
+                    FontAttributes="Bold"
+                    FontSize="Small"
+                    Text="Time of Sunset"
+                    TextColor="Black"
+                    VerticalOptions="Center"/>
+                <Label
+                    FontSize="15"
+                    Text="{Binding sys.sunset, Converter={StaticResource longToDateTimeConverter}}"
+                    TextColor="Black"
+                    VerticalOptions="Center"/>
+            </StackLayout>
+
+        </StackLayout>
+
+        <StackLayout
+            Grid.Row="3"
+            Margin="0,40,0,0"
+            Orientation="Horizontal">
+            <Entry 
+                x:Name="_cityEntry"
+                Margin="5,0"
+                BackgroundColor="#7c58c9"
+                CharacterSpacing="7"
+                HorizontalTextAlignment="Center"
+                Text="Karachi"
+                TextColor="White"
+                VerticalOptions="Center"
+                WidthRequest="250"/>
 
             <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+                BackgroundColor="#7c58c9"
+                BorderColor="White"
+                BorderWidth="1"
+                Clicked="OnGetWeatherButtonClicked"
+                Text="Get Weather"
+                TextColor="White"/>
+        </StackLayout>
 
-        </VerticalStackLayout>
-    </ScrollView>
+    </Grid>
 
 </ContentPage>
